--- a/sdk/python/tests/compiler/testdata/parallelfor_pipeline_param_in_items_resolving.yaml
+++ b/sdk/python/tests/compiler/testdata/parallelfor_pipeline_param_in_items_resolving.yaml
@@ -2,10 +2,10 @@ apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
   generateName: parallelfor-pipeline-param-in-items-resolving-
-  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.1.2, pipelines.kubeflow.org/pipeline_compilation_time: '2020-12-12T14:26:16.151961',
-    pipelines.kubeflow.org/pipeline_spec: '{"inputs": [{"name": "name1", "type": "String"},
-      {"name": "name2", "type": "String"}], "name": "Parallelfor pipeline param in
-      items resolving"}'}
+  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.1.2, pipelines.kubeflow.org/pipeline_compilation_time: '2020-12-16T12:33:21.939775',
+    pipelines.kubeflow.org/pipeline_spec: '{"inputs": [{"name": "fname1", "type":
+      "String"}, {"name": "fname2", "type": "String"}], "name": "Parallelfor pipeline
+      param in items resolving"}'}
   labels: {pipelines.kubeflow.org/kfp_sdk_version: 1.1.2}
 spec:
   entrypoint: parallelfor-pipeline-param-in-items-resolving
@@ -213,8 +213,8 @@ spec:
   - name: parallelfor-pipeline-param-in-items-resolving
     inputs:
       parameters:
-      - {name: name1}
-      - {name: name2}
+      - {name: fname1}
+      - {name: fname2}
     dag:
       tasks:
       - name: for-loop-for-loop-00000001-1
@@ -222,7 +222,7 @@ spec:
         arguments:
           parameters:
           - {name: loop-item-param-00000001, value: '{{item}}'}
-        withItems: ['My name is {{workflow.parameters.name1}}', 'My name is {{workflow.parameters.name2}}']
+        withItems: ['My name is {{workflow.parameters.fname1}}', 'My name is {{workflow.parameters.fname2}}']
       - name: for-loop-for-loop-00000002-2
         template: for-loop-for-loop-00000002-2
         arguments:
@@ -230,8 +230,8 @@ spec:
           - {name: loop-item-param-00000002-subvar-first_name, value: '{{item.first_name}}'}
           - {name: loop-item-param-00000002-subvar-message, value: '{{item.message}}'}
         withItems:
-        - {first_name: '{{workflow.parameters.name1}}', message: 'My name is {{workflow.parameters.name1}}'}
-        - {first_name: '{{workflow.parameters.name2}}', message: 'My name is {{workflow.parameters.name2}}'}
+        - {first_name: '{{workflow.parameters.fname1}}', message: 'My name is {{workflow.parameters.fname1}}'}
+        - {first_name: '{{workflow.parameters.fname2}}', message: 'My name is {{workflow.parameters.fname2}}'}
       - name: for-loop-for-loop-00000003-3
         template: for-loop-for-loop-00000003-3
         arguments:
@@ -240,28 +240,28 @@ spec:
           - {name: loop-item-param-00000003-subvar-message, value: '{{item.message}}'}
         dependencies: [produce-message-2, produce-message]
         withItems:
-        - {first_name: '{{workflow.parameters.name1}}', message: '{{tasks.produce-message.outputs.parameters.produce-message-Output}}'}
-        - {first_name: '{{workflow.parameters.name2}}', message: '{{inputs.parameters.produce-message-2-Output}}'}
+        - {first_name: '{{workflow.parameters.fname1}}', message: '{{tasks.produce-message.outputs.parameters.produce-message-Output}}'}
+        - {first_name: '{{workflow.parameters.fname2}}', message: '{{tasks.produce-message-2.outputs.parameters.produce-message-2-Output}}'}
       - name: produce-message
         template: produce-message
         arguments:
           parameters:
-          - {name: name1, value: '{{inputs.parameters.name1}}'}
+          - {name: fname1, value: '{{inputs.parameters.fname1}}'}
       - name: produce-message-2
         template: produce-message-2
         arguments:
           parameters:
-          - {name: name2, value: '{{inputs.parameters.name2}}'}
+          - {name: fname2, value: '{{inputs.parameters.fname2}}'}
   - name: produce-message
     container:
-      args: [--name, '{{inputs.parameters.name1}}', '----output-paths', /tmp/outputs/Output/data]
+      args: [--fname1, '{{inputs.parameters.fname1}}', '----output-paths', /tmp/outputs/Output/data]
       command:
       - python3
       - -u
       - -c
       - |
-        def produce_message(name):
-            return "My name is %s" % name
+        def produce_message(fname1):
+            return "My name is %s" % fname1
 
         def _serialize_str(str_value: str) -> str:
             if not isinstance(str_value, str):
@@ -270,7 +270,7 @@ spec:
 
         import argparse
         _parser = argparse.ArgumentParser(prog='Produce message', description='')
-        _parser.add_argument("--name", dest="name", type=str, required=True, default=argparse.SUPPRESS)
+        _parser.add_argument("--fname1", dest="fname1", type=str, required=True, default=argparse.SUPPRESS)
         _parser.add_argument("----output-paths", dest="_output_paths", type=str, nargs=1)
         _parsed_args = vars(_parser.parse_args())
         _output_files = _parsed_args.pop("_output_paths", [])
@@ -295,7 +295,7 @@ spec:
       image: python:3.7
     inputs:
       parameters:
-      - {name: name1}
+      - {name: fname1}
     outputs:
       parameters:
       - name: produce-message-Output
@@ -304,33 +304,33 @@ spec:
       - {name: produce-message-Output, path: /tmp/outputs/Output/data}
     metadata:
       annotations: {pipelines.kubeflow.org/component_spec: '{"implementation": {"container":
-          {"args": ["--name", {"inputValue": "name"}, "----output-paths", {"outputPath":
-          "Output"}], "command": ["python3", "-u", "-c", "def produce_message(name):\n    return
-          \"My name is %s\" % name\n\ndef _serialize_str(str_value: str) -> str:\n    if
+          {"args": ["--fname1", {"inputValue": "fname1"}, "----output-paths", {"outputPath":
+          "Output"}], "command": ["python3", "-u", "-c", "def produce_message(fname1):\n    return
+          \"My name is %s\" % fname1\n\ndef _serialize_str(str_value: str) -> str:\n    if
           not isinstance(str_value, str):\n        raise TypeError(''Value \"{}\"
           has type \"{}\" instead of str.''.format(str(str_value), str(type(str_value))))\n    return
           str_value\n\nimport argparse\n_parser = argparse.ArgumentParser(prog=''Produce
-          message'', description='''')\n_parser.add_argument(\"--name\", dest=\"name\",
+          message'', description='''')\n_parser.add_argument(\"--fname1\", dest=\"fname1\",
           type=str, required=True, default=argparse.SUPPRESS)\n_parser.add_argument(\"----output-paths\",
           dest=\"_output_paths\", type=str, nargs=1)\n_parsed_args = vars(_parser.parse_args())\n_output_files
           = _parsed_args.pop(\"_output_paths\", [])\n\n_outputs = produce_message(**_parsed_args)\n\n_outputs
           = [_outputs]\n\n_output_serializers = [\n    _serialize_str,\n\n]\n\nimport
           os\nfor idx, output_file in enumerate(_output_files):\n    try:\n        os.makedirs(os.path.dirname(output_file))\n    except
           OSError:\n        pass\n    with open(output_file, ''w'') as f:\n        f.write(_output_serializers[idx](_outputs[idx]))\n"],
-          "image": "python:3.7"}}, "inputs": [{"name": "name", "type": "String"}],
+          "image": "python:3.7"}}, "inputs": [{"name": "fname1", "type": "String"}],
           "name": "Produce message", "outputs": [{"name": "Output", "type": "String"}]}',
-        pipelines.kubeflow.org/component_ref: '{}', pipelines.kubeflow.org/arguments.parameters: '{"name":
-          "{{inputs.parameters.name1}}"}'}
+        pipelines.kubeflow.org/component_ref: '{}', pipelines.kubeflow.org/arguments.parameters: '{"fname1":
+          "{{inputs.parameters.fname1}}"}'}
   - name: produce-message-2
     container:
-      args: [--name, '{{inputs.parameters.name2}}', '----output-paths', /tmp/outputs/Output/data]
+      args: [--fname1, '{{inputs.parameters.fname2}}', '----output-paths', /tmp/outputs/Output/data]
       command:
       - python3
       - -u
       - -c
       - |
-        def produce_message(name):
-            return "My name is %s" % name
+        def produce_message(fname1):
+            return "My name is %s" % fname1
 
         def _serialize_str(str_value: str) -> str:
             if not isinstance(str_value, str):
@@ -339,7 +339,7 @@ spec:
 
         import argparse
         _parser = argparse.ArgumentParser(prog='Produce message', description='')
-        _parser.add_argument("--name", dest="name", type=str, required=True, default=argparse.SUPPRESS)
+        _parser.add_argument("--fname1", dest="fname1", type=str, required=True, default=argparse.SUPPRESS)
         _parser.add_argument("----output-paths", dest="_output_paths", type=str, nargs=1)
         _parsed_args = vars(_parser.parse_args())
         _output_files = _parsed_args.pop("_output_paths", [])
@@ -364,31 +364,34 @@ spec:
       image: python:3.7
     inputs:
       parameters:
-      - {name: name2}
+      - {name: fname2}
     outputs:
+      parameters:
+      - name: produce-message-2-Output
+        valueFrom: {path: /tmp/outputs/Output/data}
       artifacts:
       - {name: produce-message-2-Output, path: /tmp/outputs/Output/data}
     metadata:
       annotations: {pipelines.kubeflow.org/component_spec: '{"implementation": {"container":
-          {"args": ["--name", {"inputValue": "name"}, "----output-paths", {"outputPath":
-          "Output"}], "command": ["python3", "-u", "-c", "def produce_message(name):\n    return
-          \"My name is %s\" % name\n\ndef _serialize_str(str_value: str) -> str:\n    if
+          {"args": ["--fname1", {"inputValue": "fname1"}, "----output-paths", {"outputPath":
+          "Output"}], "command": ["python3", "-u", "-c", "def produce_message(fname1):\n    return
+          \"My name is %s\" % fname1\n\ndef _serialize_str(str_value: str) -> str:\n    if
           not isinstance(str_value, str):\n        raise TypeError(''Value \"{}\"
           has type \"{}\" instead of str.''.format(str(str_value), str(type(str_value))))\n    return
           str_value\n\nimport argparse\n_parser = argparse.ArgumentParser(prog=''Produce
-          message'', description='''')\n_parser.add_argument(\"--name\", dest=\"name\",
+          message'', description='''')\n_parser.add_argument(\"--fname1\", dest=\"fname1\",
           type=str, required=True, default=argparse.SUPPRESS)\n_parser.add_argument(\"----output-paths\",
           dest=\"_output_paths\", type=str, nargs=1)\n_parsed_args = vars(_parser.parse_args())\n_output_files
           = _parsed_args.pop(\"_output_paths\", [])\n\n_outputs = produce_message(**_parsed_args)\n\n_outputs
           = [_outputs]\n\n_output_serializers = [\n    _serialize_str,\n\n]\n\nimport
           os\nfor idx, output_file in enumerate(_output_files):\n    try:\n        os.makedirs(os.path.dirname(output_file))\n    except
           OSError:\n        pass\n    with open(output_file, ''w'') as f:\n        f.write(_output_serializers[idx](_outputs[idx]))\n"],
-          "image": "python:3.7"}}, "inputs": [{"name": "name", "type": "String"}],
+          "image": "python:3.7"}}, "inputs": [{"name": "fname1", "type": "String"}],
           "name": "Produce message", "outputs": [{"name": "Output", "type": "String"}]}',
-        pipelines.kubeflow.org/component_ref: '{}', pipelines.kubeflow.org/arguments.parameters: '{"name":
-          "{{inputs.parameters.name2}}"}'}
+        pipelines.kubeflow.org/component_ref: '{}', pipelines.kubeflow.org/arguments.parameters: '{"fname1":
+          "{{inputs.parameters.fname2}}"}'}
   arguments:
     parameters:
-    - {name: name1}
-    - {name: name2}
+    - {name: fname1}
+    - {name: fname2}
   serviceAccountName: pipeline-runner
